[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tilemap/Medieval_props_free.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MovableObjekt.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6667, 11.3333 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.8333, 12 )

[node name="MovableObjekt" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.999998, -4 )
scale = Vector2( 2.8, 3 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.166667, -1.33333 )
scale = Vector2( 0.9, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 444, 57, 24, 33 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
